# costco-info

./: .dockerignore  Dockerfile  debug_firestore.py  debug_homepage.py  debug_hot_buys.html  debug_output.txt  debug_pagination.py  detail_analysis.txt  docker-compose.yml  main.py  pyproject.toml  test_output.txt  test_playwright_detail.py
src/: analyze_detail.py  analyze_html.py  check_api.py  check_googlebot.py  check_one.py  check_parsing.py  check_state.py  crawler.py  database.py  image_processor.py  main.py  models.py  test_logic.py  verify_fix.py  verify_price.py  view_data.py
tests/: test_db_integration.py  test_db_write.py  test_firestore_only.py  verify_crawling.py  verify_mongodb.py
